pascalParser.java
// Generated from /Users/anvishasingh/IdeaProjects/Project3/src/pascal.g4 by ANTLR 4.13.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class pascalParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PRINT=1, READ=2, AND=3, BREAK=4, CONTINUE=5, ARRAY=6, BEGIN=7, BOOLEAN=8, 
		CASE=9, CHAR=10, CHR=11, CONST=12, DIV=13, DO=14, DOWNTO=15, ELSE=16, 
		END=17, FILE=18, FOR=19, FUNCTION=20, GOTO=21, IF=22, IN=23, INTEGER=24, 
		LABEL=25, MOD=26, NIL=27, NOT=28, OF=29, OR=30, PACKED=31, PROCEDURE=32, 
		CONSTRUCTOR=33, DESTRUCTOR=34, PROGRAM=35, PRIVATE=36, PROTECTED=37, PUBLIC=38, 
		REAL=39, RECORD=40, CLASS=41, REPEAT=42, SET=43, THEN=44, TO=45, TYPE=46, 
		UNTIL=47, VAR=48, WHILE=49, WITH=50, PLUS=51, MINUS=52, STAR=53, SLASH=54, 
		ASSIGN=55, COMMA=56, SEMI=57, COLON=58, EQUAL=59, NOT_EQUAL=60, LT=61, 
		LE=62, GE=63, GT=64, LPAREN=65, RPAREN=66, LBRACK=67, LBRACK2=68, RBRACK=69, 
		RBRACK2=70, POINTER=71, AT=72, DOT=73, DOTDOT=74, LCURLY=75, RCURLY=76, 
		UNIT=77, INTERFACE=78, USES=79, STRING=80, IMPLEMENTATION=81, TRUE=82, 
		FALSE=83, WS=84, COMMENT_1=85, COMMENT_2=86, IDENT=87, STRING_LITERAL=88, 
		NUM_INT=89, NUM_REAL=90;
	public static final int
		RULE_program = 0, RULE_programHeading = 1, RULE_identifier = 2, RULE_block = 3, 
		RULE_usesUnitsPart = 4, RULE_labelDeclarationPart = 5, RULE_label = 6, 
		RULE_constantDefinitionPart = 7, RULE_constantDefinition = 8, RULE_constantChr = 9, 
		RULE_constant = 10, RULE_unsignedNumber = 11, RULE_unsignedInteger = 12, 
		RULE_unsignedReal = 13, RULE_sign = 14, RULE_bool_ = 15, RULE_string = 16, 
		RULE_typeDefinitionPart = 17, RULE_typeDefinition = 18, RULE_functionType = 19, 
		RULE_procedureType = 20, RULE_type_ = 21, RULE_simpleType = 22, RULE_scalarType = 23, 
		RULE_subrangeType = 24, RULE_typeIdentifier = 25, RULE_structuredType = 26, 
		RULE_unpackedStructuredType = 27, RULE_stringtype = 28, RULE_arrayType = 29, 
		RULE_typeList = 30, RULE_indexType = 31, RULE_componentType = 32, RULE_recordType = 33, 
		RULE_classType = 34, RULE_interfaceType = 35, RULE_fieldList = 36, RULE_fixedPart = 37, 
		RULE_recordSection = 38, RULE_variantPart = 39, RULE_tag = 40, RULE_variant = 41, 
		RULE_setType = 42, RULE_baseType = 43, RULE_fileType = 44, RULE_pointerType = 45, 
		RULE_variableDeclarationPart = 46, RULE_variableDeclaration = 47, RULE_procedureAndFunctionDeclarationPart = 48, 
		RULE_classprocedureAndFunctionImplementationPart = 49, RULE_procedureOrFunctionDeclaration = 50, 
		RULE_classprocedureOrFunctionImplementation = 51, RULE_procedureDeclaration = 52, 
		RULE_formalParameterList = 53, RULE_classprocedureOrFunctionDeclaration = 54, 
		RULE_classprocedureDeclaration = 55, RULE_classfunctionDeclaration = 56, 
		RULE_classConstructorDeclaration = 57, RULE_classDestructorDeclaration = 58, 
		RULE_formalParameterSection = 59, RULE_parameterGroup = 60, RULE_identifierList = 61, 
		RULE_constList = 62, RULE_functionDeclaration = 63, RULE_classfunctionImplementation = 64, 
		RULE_classprocedureImplementation = 65, RULE_classconstructorImplementation = 66, 
		RULE_classdestructorImplementation = 67, RULE_resultType = 68, RULE_statement = 69, 
		RULE_unlabelledStatement = 70, RULE_ioStatement = 71, RULE_readStatement = 72, 
		RULE_printStatement = 73, RULE_simpleStatement = 74, RULE_breakStatement = 75, 
		RULE_continueStatement = 76, RULE_objectStatement = 77, RULE_assignmentStatement = 78, 
		RULE_variable = 79, RULE_expression = 80, RULE_relationaloperator = 81, 
		RULE_simpleExpression = 82, RULE_additiveoperator = 83, RULE_term = 84, 
		RULE_multiplicativeoperator = 85, RULE_signedFactor = 86, RULE_factor = 87, 
		RULE_unsignedConstant = 88, RULE_functionDesignator = 89, RULE_parameterList = 90, 
		RULE_set_ = 91, RULE_elementList = 92, RULE_element = 93, RULE_procedureStatement = 94, 
		RULE_actualParameter = 95, RULE_parameterwidth = 96, RULE_gotoStatement = 97, 
		RULE_emptyStatement_ = 98, RULE_empty_ = 99, RULE_structuredStatement = 100, 
		RULE_compoundStatement = 101, RULE_statements = 102, RULE_conditionalStatement = 103, 
		RULE_ifStatement = 104, RULE_caseStatement = 105, RULE_caseListElement = 106, 
		RULE_repetetiveStatement = 107, RULE_whileStatement = 108, RULE_repeatStatement = 109, 
		RULE_forStatement = 110, RULE_forList = 111, RULE_initialValue = 112, 
		RULE_finalValue = 113, RULE_withStatement = 114, RULE_recordVariableList = 115;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "programHeading", "identifier", "block", "usesUnitsPart", 
			"labelDeclarationPart", "label", "constantDefinitionPart", "constantDefinition", 
			"constantChr", "constant", "unsignedNumber", "unsignedInteger", "unsignedReal", 
			"sign", "bool_", "string", "typeDefinitionPart", "typeDefinition", "functionType", 
			"procedureType", "type_", "simpleType", "scalarType", "subrangeType", 
			"typeIdentifier", "structuredType", "unpackedStructuredType", "stringtype", 
			"arrayType", "typeList", "indexType", "componentType", "recordType", 
			"classType", "interfaceType", "fieldList", "fixedPart", "recordSection", 
			"variantPart", "tag", "variant", "setType", "baseType", "fileType", "pointerType", 
			"variableDeclarationPart", "variableDeclaration", "procedureAndFunctionDeclarationPart", 
			"classprocedureAndFunctionImplementationPart", "procedureOrFunctionDeclaration", 
			"classprocedureOrFunctionImplementation", "procedureDeclaration", "formalParameterList", 
			"classprocedureOrFunctionDeclaration", "classprocedureDeclaration", "classfunctionDeclaration", 
			"classConstructorDeclaration", "classDestructorDeclaration", "formalParameterSection", 
			"parameterGroup", "identifierList", "constList", "functionDeclaration", 
			"classfunctionImplementation", "classprocedureImplementation", "classconstructorImplementation", 
			"classdestructorImplementation", "resultType", "statement", "unlabelledStatement", 
			"ioStatement", "readStatement", "printStatement", "simpleStatement", 
			"breakStatement", "continueStatement", "objectStatement", "assignmentStatement", 
			"variable", "expression", "relationaloperator", "simpleExpression", "additiveoperator", 
			"term", "multiplicativeoperator", "signedFactor", "factor", "unsignedConstant", 
			"functionDesignator", "parameterList", "set_", "elementList", "element", 
			"procedureStatement", "actualParameter", "parameterwidth", "gotoStatement", 
			"emptyStatement_", "empty_", "structuredStatement", "compoundStatement", 
			"statements", "conditionalStatement", "ifStatement", "caseStatement", 
			"caseListElement", "repetetiveStatement", "whileStatement", "repeatStatement", 
			"forStatement", "forList", "initialValue", "finalValue", "withStatement", 
			"recordVariableList"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'PRINT'", "'READ'", "'AND'", "'BREAK'", "'CONTINUE'", "'ARRAY'", 
			"'BEGIN'", "'BOOLEAN'", "'CASE'", "'CHAR'", "'CHR'", "'CONST'", "'DIV'", 
			"'DO'", "'DOWNTO'", "'ELSE'", "'END'", "'FILE'", "'FOR'", "'FUNCTION'", 
			"'GOTO'", "'IF'", "'IN'", "'INTEGER'", "'LABEL'", "'MOD'", "'NIL'", "'NOT'", 
			"'OF'", "'OR'", "'PACKED'", "'PROCEDURE'", "'CONSTRUCTOR'", "'DESTRUCTOR'", 
			"'PROGRAM'", "'PRIVATE'", "'PROTECTED'", "'PUBLIC'", "'REAL'", "'RECORD'", 
			"'CLASS'", "'REPEAT'", "'SET'", "'THEN'", "'TO'", "'TYPE'", "'UNTIL'", 
			"'VAR'", "'WHILE'", "'WITH'", "'+'", "'-'", "'*'", "'/'", "':='", "','", 
			"';'", "':'", "'='", "'<>'", "'<'", "'<='", "'>='", "'>'", "'('", "')'", 
			"'['", "'(.'", "']'", "'.)'", "'^'", "'@'", "'.'", "'..'", "'{'", "'}'", 
			"'UNIT'", "'INTERFACE'", "'USES'", "'STRING'", "'IMPLEMENTATION'", "'TRUE'", 
			"'FALSE'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "PRINT", "READ", "AND", "BREAK", "CONTINUE", "ARRAY", "BEGIN", 
			"BOOLEAN", "CASE", "CHAR", "CHR", "CONST", "DIV", "DO", "DOWNTO", "ELSE", 
			"END", "FILE", "FOR", "FUNCTION", "GOTO", "IF", "IN", "INTEGER", "LABEL", 
			"MOD", "NIL", "NOT", "OF", "OR", "PACKED", "PROCEDURE", "CONSTRUCTOR", 
			"DESTRUCTOR", "PROGRAM", "PRIVATE", "PROTECTED", "PUBLIC", "REAL", "RECORD", 
			"CLASS", "REPEAT", "SET", "THEN", "TO", "TYPE", "UNTIL", "VAR", "WHILE", 
			"WITH", "PLUS", "MINUS", "STAR", "SLASH", "ASSIGN", "COMMA", "SEMI", 
			"COLON", "EQUAL", "NOT_EQUAL", "LT", "LE", "GE", "GT", "LPAREN", "RPAREN", 
			"LBRACK", "LBRACK2", "RBRACK", "RBRACK2", "POINTER", "AT", "DOT", "DOTDOT", 
			"LCURLY", "RCURLY", "UNIT", "INTERFACE", "USES", "STRING", "IMPLEMENTATION", 
			"TRUE", "FALSE", "WS", "COMMENT_1", "COMMENT_2", "IDENT", "STRING_LITERAL", 
			"NUM_INT", "NUM_REAL"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "pascal.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public pascalParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public ProgramHeadingContext programHeading() {
			return getRuleContext(ProgramHeadingContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode DOT() { return getToken(pascalParser.DOT, 0); }
		public TerminalNode EOF() { return getToken(pascalParser.EOF, 0); }
		public TerminalNode INTERFACE() { return getToken(pascalParser.INTERFACE, 0); }
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pascalListener ) ((pascalListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pascalListener ) ((pascalListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof pascalVisitor ) return ((pascalVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(232);
			programHeading();
			setState(234);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==INTERFACE) {
				{
				setState(233);
				match(INTERFACE);
				}
			}

			setState(236);
			block();
			setState(237);
			match(DOT);
			setState(238);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramHeadingContext extends ParserRuleContext {
		public TerminalNode PROGRAM() { return getToken(pascalParser.PROGRAM, 0); }
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(pascalParser.SEMI, 0); }
		public TerminalNode LPAREN() { return getToken(pascalParser.LPAREN, 0); }
		public IdentifierListContext identifierList() {
			return getRuleContext(IdentifierListContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(pascalParser.RPAREN, 0); }
		public TerminalNode UNIT() { return getToken(pascalParser.UNIT, 0); }
		public ProgramHeadingContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programHeading; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pascalListener ) ((pascalListener)listener).enterProgramHeading(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pascalListener ) ((pascalListener)listener).exitProgramHeading(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof pascalVisitor ) return ((pascalVisitor<? extends T>)visitor).visitProgramHeading(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramHeadingContext programHeading() throws RecognitionException {
		ProgramHeadingContext _localctx = new ProgramHeadingContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_programHeading);
		int _la;
		try {
			setState(254);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case PROGRAM:
				enterOuterAlt(_localctx, 1);
				{
				setState(240);
				match(PROGRAM);
				setState(241);
				identifier();
				setState(246);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==LPAREN) {
					{
					setState(242);
					match(LPAREN);
					setState(243);
					identifierList();
					setState(244);
					match(RPAREN);
					}
				}

				setState(248);
				match(SEMI);
				}
				break;
			case UNIT:
				enterOuterAlt(_localctx, 2);
				{
				setState(250);
				match(UNIT);
				setState(251);
				identifier();
				setState(252);
				match(SEMI);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IdentifierContext extends ParserRuleContext {
		public TerminalNode IDENT() { return getToken(pascalParser.IDENT, 0); }
		public IdentifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_identifier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pascalListener ) ((pascalListener)listener).enterIdentifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pascalListener ) ((pascalListener)listener).exitIdentifier(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof pascalVisitor ) return ((pascalVisitor<? extends T>)visitor).visitIdentifier(this);
			else return visitor.visitChildren(this);
		}
	}
